@@ -35,10 +35,10 @@
       </div>
     <% end %>
 
-    <% if Thoth::Config.site['enable_comments'] %>
+    <% comment_count = @post.comments.count %>
+    <% if Thoth::Config.site['enable_comments'] && (comment_count > 0 || @post.allow_comments) %>
       <div class="meta robots-nocontent">
         <span class="icon comments"></span>
-        <% comment_count = @post.comments.count %>
         <a href="<%== @post.url %>#comments">
           <%= comment_count %> comment<%= comment_count == 1 ? '' : 's' %>
         </a>
