@@ -19,10 +19,13 @@ Version 0.3.0 (?)
   * Added memcache support, disabled by default. Overkill for most blogs, but if
     you've got a crazy high-traffic site and need to balance load across many
     processes or servers, this is for you.
-  * The "New comment" form now requires an email address.
   * Twitter plugin now excludes replies by default.
   * Twitter plugin now turns #hashtags into links.
+  * Comments can now be enabled and disabled on individual posts.
+  * Deleted comments remain in the database but are hidden from view, rather
+    than being permanently deleted.
   * Comment HTML sanitization was separated out into a new gem, Sanitize.
+  * The "New comment" form now requires an email address.
   * Comment titles are now limited to 150 characters instead of 255.
   * Long unbroken runs of text without whitespace in comments are now broken up
     with <wbr /> tags to make them wrap without breaking the site layout.
